--- a/src/app/pages/private/pages/posts/posts.component.html
+++ b/src/app/pages/private/pages/posts/posts.component.html
@@ -1,1 +1,33 @@
-<p>posts works!</p>
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title">Mis posts</h4>
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Titulo</th>
+                        <th>visitas</th>
+                        <th>publicacion</th>
+                        <th class="text-nowrap">accion</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let post of posts ">
+                        <td>{{post.title}}</td>
+                        <td>
+                            <div class="progress progress-xs margin-vertical-10 ">
+                                <div class="progress-bar bg-danger" style="width: 35%; height:6px;"></div>
+                            </div>
+                        </td>
+                        <td>May 15, 2015</td>
+                        <td class="text-nowrap">
+                            <a data-toggle="tooltip" data-original-title="editar posts"> <i class="fa fa-pencil text-inverse m-r-10"></i> </a>
+                            <a data-toggle="tooltip" (click)="eliminarPost(post._id)" data-original-title="eliminar el post"> <i class="fa fa-close text-danger"></i> </a>
+                        </td>
+                    </tr>
+             
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
