--- a/src/app/pages/private/pages/subir-post/subir-post.component.html
+++ b/src/app/pages/private/pages/subir-post/subir-post.component.html
@@ -1,219 +1,189 @@
-<div  class="row galeria">
-     <div class="col-md-12">
-         <h2 class="titulo">Galeria</h2>
-     </div>
-    <div class="col-md-6">
-       <div class="card" style="width: 80h;">
-           <div class="card-body">
-               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                   <div class="carousel-inner" role="listbox">
-                       <div class="carousel-item active"> <img class="img-responsive" src="assets/images/big/img4.jpg" alt="First slide"> </div>
-                       <div class="carousel-item"> <img class="img-responsive" src="assets/images/big/img5.jpg" alt="Second slide"> </div>
-                       <div class="carousel-item"> <img class="img-responsive" src="assets/images/big/img6.jpg" alt="Third slide"> </div>
-                   </div>
-                   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
-                   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
-               </div>
-       </div>
-   </div>
-    </div>
-    <div class="col-md-4 text-left mp-2">
-       <!-- ============================================================== -->
-       <!-- ------------------------- galeria --------------- -->
-       <!-- ============================================================== -->
-
-       <div  *ngIf="load" >
-        <div class="row el-element-overlay">
-            <div class="col-md-6">
-                <div class="el-card-item">
-                    <div class="el-card-avatar el-overlay-1"> <img src="assets/images/big/img2.jpg" alt="user">
-                        <div class="el-overlay">
-                            <ul class="el-info">
-                                <li><a class="btn default btn-outline image-popup-vertical-fit" href="assets/images/users/1.jpg"><i class="icon-magnifier"></i></a></li>
-                                <!-- <li><a class="btn default btn-outline" href="javascript:void(0);"><i class="icon-link"></i></a></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>    
-    
-            <div class="col-md-6">
-                <div class="el-card-item">
-                    <div class="el-card-avatar el-overlay-1"> <img src="assets/images/big/img2.jpg" alt="user">
-                        <div class="el-overlay">
-                            <ul class="el-info">
-                                <li><a class="btn default btn-outline image-popup-vertical-fit" href="assets/images/users/1.jpg"><i class="fa  fa-cloud-upload"></i></a></li>
-                                <!-- <li><a class="btn default btn-outline" href="javascript:void(0);"><i class="icon-link"></i></a></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>    
-    
-            <div class="col-md-6">
-                <div class="el-card-item">
-                    <div class="el-card-avatar el-overlay-1"> <img src="assets/images/big/img2.jpg" alt="user">
-                        <div class="el-overlay">
-                            <ul class="el-info">
-                                <li><a class="btn default btn-outline image-popup-vertical-fit" href="assets/images/users/1.jpg"><i class="icon-magnifier"></i></a></li>
-                                <!-- <li><a class="btn default btn-outline" href="javascript:void(0);"><i class="icon-link"></i></a></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>    
-    
-            <div class="col-md-6">
-                <div class="el-card-item">
-                    <div class="el-card-avatar el-overlay-1"> <img src="assets/images/big/img2.jpg" alt="user">
-                        <div class="el-overlay">
-                            <ul class="el-info">
-                                <li><a class="btn default btn-outline image-popup-vertical-fit" href="assets/images/users/1.jpg"><i class="icon-magnifier"></i></a></li>
-                                <!-- <li><a class="btn default btn-outline" href="javascript:void(0);"><i class="icon-link"></i></a></li> -->
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>    
-            <div class="col-md-12 text-center">
-                <button class="btn btn-primary btn-block">
-                    actualizar
-                </button>
-            </div>
-        </div>    
-        
-
-        
-    </div>               
-       <!-- ============================================================== -->
-       <!-- ---------------fin galeria --------------------------- -->
-       <!-- ==============================================================-->
-
-
-    </div>
-
-</div>
-
-<div class="row">
-    <div class="col-md-9">
-
-       <!-- cuerpo del post -->
-       <div class="row">
-           <!-- titulo del post -->
-           <div class="col-md-12">
-            <h2 class="titulo">Titulo</h2>
-         </div>
-           <div class="col-md-12">
-                <form #f="ngForm"
-                 class="floating-labels">
-                    <div class="form-group m-b-40">
-                        <input type="text" 
-                        name="titulo"
-                         [(ngModel)]="titulo"
-                        class="form-control">
-                        <span class="bar"></span>
-                        <label for="input1">Inspirate</label>
-                    </div>
-                </form>
-           </div>
-           <!-- titulo del post -->
-           <!-- categoria del post -->
-           <div class="col-md-12">
-            <h2 class="titulo">Categoria</h2>
-         </div>
-           <div class="col-md-12">
-                <form #f="ngForm"
-                 class="floating-labels">
-                    <div class="form-group m-b-40">
-                        <input type="text" 
-                        name="titulo"
-                         [(ngModel)]="categoria"
-                        class="form-control">
-                        <span class="bar"></span>
-                        <label for="input1">Categoria</label>
-                    </div>
-                </form>   
-           </div>
-           <!-- categoria del post -->
-    
-           <div class="col-md-12">
-               <h2 class="titulo">Cuerpo del post</h2>
-            </div>
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-body">
-                        <div [froalaEditor]="options" [(froalaModel)]="editorContent">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> 
-        <!-- cuerpo del post -->
-        <!-- extracto del post -->
-        <div class="row">
-            <div class="col-md-12">
-                <h2 class="titulo">extracto del post</h2>
-            </div>
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-body">
-                        <div [froalaEditor]="options2" 
-                        [(froalaModel)]="extracto" >
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12">
-                      <!-- parte de los tags -->
-           <div class="row">
-              <div class="col-12">
-                  <h2 class="titulo">Keywords</h2>
-                  <div class="card">
-                      <div class="car-header">
-                          <input
-                          #tag
-                          (keyup.space)="agregarTag(tag.value)" 
-                          type="text"  class="form-control" placeholder="escribe tu tags">
-                     
-                       </div>
-                      <div class="card-body">
-                        <div class="tags-default pb-3">
-                            <span
-                            *ngFor="let tag of tags" 
-                            class="tag label label-info">
-                               {{tag}}
-                                <span data-role="remove"></span>
-                            </span>
-                        </div>
-                      </div>
-                  </div>
-              </div>
-            </div> 
-            <!-- parte de los tags -->
-            </div>
-          </div> 
-        <!-- extracto del post -->
-      
-        <div class="row">
-           <div class="col-sm-12 col-md-6">
-            <button class="btn btn-danger btn-block" >
-                salir
-          </button>
-            <button 
-             (click)="guardarContenido()" 
-            class="btn btn-primary btn-block" >
-                    guardar
-            </button>
-           </div>
-           <div class="col-sm-12 col-md-6">
-         
-           </div>
-        
+<div class="load card">
+    <div  class="row galeria">
+        <div class="col-md-12">
+            <h2 class="titulo">Galeria</h2>
         </div>
+       <div class="col-md-12" style="height: 50vh;">
+          <div  >
+              <div class="card-body">
+                  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner" style="height: 50vh;" role="listbox">
+                          <div class="carousel-item text-center" style="overflow: hidden;" *ngFor="let image of imagenes" [ngClass]="{'active': image  == imagenes[0]}" > 
+                              <img   class="img-responsive image" [src]="image" alt="First slide">
+                           </div>
+                      </div>
+                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
+                      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
+                  </div>
+             </div>
+          </div>
+       </div>
+       <div class="col-md-12 mp-2 galery">
+          <!-- ============================================================== -->
+          <!-- ------------------------- galeria --------------- -->
+          <!-- ============================================================== -->
+          <div  *ngIf="load" >
+           <div class="row el-element-overlay">
+               <div class="col-md-3" *ngFor="let image of imagenes">
+                   <div class="el-card-item">
+                       <div class="el-card-avatar el-overlay-1 itm"> 
+                           <img class="imageG" [src]="image" alt="user">
+                           <div class="el-overlay">
+                               <ul class="el-info">
+                                   <li>
+                                        <a (click)=" eliminarImagen(image)" 
+                                        class="btn default btn-outline">
+                                            <i class="fa  fa-cloud-upload">
+                                            </i>
+                                        </a>
+                                   </li>
+                                   <!-- <li><a class="btn default btn-outline" href="javascript:void(0);"><i class="icon-link"></i></a></li> -->
+                               </ul>
+                           </div>
+                       </div>
+                   </div>
+               </div>    
+       
+             
+               <div class="col-md-12 text-center">
+                   <input (change)="manejarImagen($event)" type="file" name="file" id="file" class="inputfile" />
+                    <label for="file">upload</label>
+               </div>
+           </div>         
+       </div>               
+          <!-- ============================================================== -->
+          <!-- ---------------fin galeria --------------------------- -->
+          <!-- ==============================================================-->
+   
+   
+       </div>
+   
+   </div>
+   
+   <div class="row">
+       <div class="col-md-9">
+   
+          <!-- cuerpo del post -->
+          <div class="row">
+              <!-- titulo del post -->
+              <div class="col-md-12">
+               <h2 class="titulo">Titulo</h2>
+            </div>
+              <div class="col-md-12">
+                   <form #f="ngForm"
+                    class="floating-labels">
+                       <div class="form-group m-b-40">
+                           <input type="text" 
+                           name="titulo"
+                            [(ngModel)]="titulo"
+                           class="form-control"
+                           placeholder="inspirate">
+                           <!-- <span class="bar"></span> -->
+                           <!-- <label for="input1">Inspirate</label> -->
+                       </div>
+                   </form>
+              </div>
+              <!-- titulo del post -->
+              <!-- categoria del post -->
+              <div class="col-md-12">
+               <h2 class="titulo">Categoria</h2>
+            </div>
+              <div class="col-md-12">
+                   <form #f="ngForm"
+                    class="floating-labels">
+                       <div class="form-group m-b-40">
+                           <input type="text" 
+                           name="titulo"
+                            [(ngModel)]="categoria"
+                           class="form-control"
+                            placeholder="categoria">
+                           <!-- <span class="bar"></span> -->
+                           <!-- <label for="input1">Categoria</label> -->
+                       </div>
+                   </form>   
+              </div>
+              <!-- categoria del post -->
+       
+              <div class="col-md-12">
+                  <h2 class="titulo">Cuerpo del post</h2>
+               </div>
+               <div class="col-12">
+                   <div class="card">
+                       <div class="card-body">
+                           <div [froalaEditor]="options" [(froalaModel)]="editorContent">
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div> 
+           <!-- cuerpo del post -->
+           <!-- extracto del post -->
+           <div class="row">
+               <div class="col-md-12">
+                   <h2 class="titulo">extracto del post</h2>
+               </div>
+               <div class="col-12">
+                   <div class="card">
+                       <div class="card-body">
+                           <div [froalaEditor]="options2" 
+                           [(froalaModel)]="extracto" >
+                           </div>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-md-12">
+                         <!-- parte de los tags -->
+              <div class="row">
+                 <div class="col-12">
+                     <h2 class="titulo">Keywords</h2>
+                     <div class="card">
+                         <div class="car-header">
+                             <input
+                             #tag
+                             (keyup.space)="agregarTag(tag)" 
+                             type="text"  class="form-control" placeholder="escribe tu tags">
+                        
+                          </div>
+                         <div class="card-body">
+                           <div class="tags-default pb-3">
+                               <span
+                               *ngFor="let tag of tags" 
+                               class="tag label label-info"
+                                (click)="eliminarTag(tag)">
+                                  {{tag}}
+                                   <span data-role="remove"></span>
+                               </span>
+                           </div>
+                         </div>
+                     </div>
+                 </div>
+               </div> 
+               <!-- parte de los tags -->
+               </div>
+             </div> 
+           <!-- extracto del post -->
          
+           <div class="row">
+              <div class="col-sm-12 col-md-5">
+               <button class="btn btn-danger btn-block" >
+                   salir
+             </button>
+              </div>
+              <div class="col-md-5">
+               <button 
+               (click)="guardarContenido()" 
+              class="btn btn-primary btn-block" >
+                      guardar
+              </button>
+              </div>
+           
+           </div>
+            
+       
+   
+       </div>
     
-
-    </div>
- 
-
+   
+   </div>
+   
 </div>
