cambios en editar post

--- a/src/app/pages/private/pages/edit-post/edit-post.component.html
+++ b/src/app/pages/private/pages/edit-post/edit-post.component.html
@@ -61,7 +61,7 @@
    </div>
    
    <div class="row">
-       <div class="col-md-9 col-sm-12">
+       <div class="col-md-9">
    
           <!-- cuerpo del post -->
           <div class="row">
@@ -182,14 +182,8 @@
        
    
        </div>
-      <div class="col-md-3 col-sm-12">
-         <button class="btn btn-primary btn-block">
-            <i class="mdi mdi-code-greater-than"></i>
-            ver post
-         </button>  
-
-      </div>
     
+   
    </div>
    
 </div>
