--- a/src/app/pages/private/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/pages/private/components/breadcrumbs/breadcrumbs.component.html
@@ -1,14 +1,17 @@
 <div class="row page-titles">
     <div class="col-md-5 align-self-center">
-        <h3 class="text-themecolor">Blank Page</h3>
+        <h3 class="text-themecolor">{{titulo}}</h3>
     </div>
     <div class="col-md-7 align-self-center">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="javascript:void(0)">Home</a>
+                <a href="javascript:void(0)">AdminBlog</a>
             </li>
-            <li class="breadcrumb-item">pages</li>
-            <li class="breadcrumb-item active">Blank Page</li>
+           
+            <li class="breadcrumb-item">
+                <a href="javascript:void(0)">{{titulo}}</a>
+            </li>
+           
         </ol>
     </div>
     <div>
