--- a/src/app/pages/private/pages/edit-post/edit-post.component.html
+++ b/src/app/pages/private/pages/edit-post/edit-post.component.html
@@ -1,4 +1,4 @@
-<div class="load card">
+<div >
     <div  class="row galeria">
         <div class="col-md-12">
             <h2 class="titulo">Galeria</h2>
@@ -182,7 +182,15 @@
        
    
        </div>
-    
+       <div class="col-md-3 col-sm-12">
+        <a 
+         [routerLink]="['/single', postBd._id ]" 
+        class="btn btn-primary btn-block">
+           <i class="mdi mdi-code-greater-than"></i>
+           ver post
+        </a>  
+
+     </div>
    
    </div>
    
