--- a/src/app/pages/private/private.component.html
+++ b/src/app/pages/private/private.component.html
@@ -29,7 +29,7 @@
         <!-- ============================================================== -->
         <!-- Page wrapper  -->
         <!-- ============================================================== -->
-        <div class="page-wrapper">
+        <div class="page-wrapper card">
 
             <!-- ============================================================== -->
             <!-- Container fluid  -->
@@ -38,16 +38,16 @@
                 <!-- ============================================================== -->
                 <!-- Bread crumb and right sidebar toggle -->
                 <!-- ============================================================== -->
-           <app-breadcrumbs></app-breadcrumbs>
+                <app-breadcrumbs></app-breadcrumbs>
                 <!-- ============================================================== -->
                 <!-- End Bread crumb and right sidebar toggle -->
+                
                 <!-- ============================================================== -->
-                 <router-outlet></router-outlet>
                  
                 <!-- ============================================================== -->
                 <!-- Start Page Content -->
                 <!-- ============================================================== -->
-          
+                <router-outlet></router-outlet>
                 <!-- ============================================================== -->
                 <!-- End PAge Content -->
                 <!-- ============================================================== -->
