--- a/src/app/pages/public/public.component.html
+++ b/src/app/pages/public/public.component.html
@@ -1,35 +1,14 @@
-<div id="top" class="body">
-    <!-- <app-navbar></app-navbar> -->
-    
-    <!-- pageheader
-        ================================================== -->
-        <section class="s-pageheader s-pageheader--home">
-            <app-navbar></app-navbar>
-            <app-popular></app-popular>
-       </section> <!-- end s-pageheader -->
-    <!-- s-content
-    ================================================== --> 
-      <app-posts></app-posts>
+
+ <app-header></app-header>
+
+<!-- ============================================================== -->
+<!-- --------------------------pages routes --------------- -->
+<!-- ============================================================== -->
+<router-outlet></router-outlet>
+			          
+<!-- ============================================================== -->
+<!-- ---------------fin pages routes --------------------------- -->
+<!-- ==============================================================-->
  
-
-   <app-popular-posts></app-popular-posts>
- 
-
-    <!-- s-footer
-    ================================================== -->
-   <app-footer></app-footer>
-
-    <!-- =========================k========================= -->
-     <div id="preloader">
-        <div id="loader">
-            <div class="line-scale">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </div>
-    </div> 
-</div>  
-
+	
+<app-footer></app-footer>
