--- a/src/app/pages/private/pages/subir-post/subir-post.component.html
+++ b/src/app/pages/private/pages/subir-post/subir-post.component.html
@@ -55,7 +55,6 @@
           <!-- ---------------fin galeria --------------------------- -->
           <!-- ==============================================================-->
    
-   
        </div>
    
    </div>
@@ -183,10 +182,12 @@
    
        </div>
       <div class="col-md-3 col-sm-12">
-         <button class="btn btn-primary btn-block">
+         <a 
+         
+         class="btn btn-primary btn-block">
             <i class="mdi mdi-code-greater-than"></i>
             ver post
-         </button>  
+         </a>  
 
       </div>
     
