cambios en rutas publicas

--- a/src/app/pages/private/pages/edit-post/edit-post.component.html
+++ b/src/app/pages/private/pages/edit-post/edit-post.component.html
@@ -1,13 +1,13 @@
-<div >
+<div *ngIf="postBd" >
     <div  class="row galeria">
         <div class="col-md-12">
             <h2 class="titulo">Galeria</h2>
         </div>
-       <div class="col-md-12" style="height: 50vh;">
-          <div  >
+       <div class="col-md-12" style="height: 35vh;">
+        
               <div class="card-body">
                   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                      <div class="carousel-inner" style="height: 50vh;" role="listbox">
+                      <div class="carousel-inner" style="height: 30vh;" role="listbox">
                           <div class="carousel-item text-center" style="overflow: hidden;" *ngFor="let image of imagenes" [ngClass]="{'active': image  == imagenes[0]}" > 
                               <img   class="img-responsive image" [src]="image" alt="First slide">
                            </div>
@@ -16,9 +16,10 @@
                       <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
                   </div>
              </div>
-          </div>
+           
+        
        </div>
-       <div class="col-md-12 mp-2 galery">
+       <div class="col-md-12 galery">
           <!-- ============================================================== -->
           <!-- ------------------------- galeria --------------- -->
           <!-- ============================================================== -->
@@ -55,10 +56,10 @@
           <!-- ---------------fin galeria --------------------------- -->
           <!-- ==============================================================-->
    
-   
        </div>
    
    </div>
+
    
    <div class="row">
        <div class="col-md-9">
@@ -183,7 +184,7 @@
    
        </div>
        <div class="col-md-3 col-sm-12">
-        <a 
+        <a
          [routerLink]="['/single', postBd._id ]" 
         class="btn btn-primary btn-block">
            <i class="mdi mdi-code-greater-than"></i>
