--- a/src/app/pages/private/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/pages/private/components/breadcrumbs/breadcrumbs.component.html
@@ -1,20 +1,14 @@
-<div class="row page-titles">
-    <div class="col-md-5 align-self-center">
-        <h3 class="text-themecolor">{{titulo}}</h3>
-    </div>
-    <div class="col-md-7 align-self-center">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-                <a href="javascript:void(0)">AdminBlog</a>
-            </li>
-           
-            <li class="breadcrumb-item">
-                <a href="javascript:void(0)">{{titulo}}</a>
-            </li>
-           
-        </ol>
-    </div>
-    <div>
+<div class="row card">
+      <div class="container">
+        <nav class="breadcrumb">
+            <a class="breadcrumb-item" href="#">Home</a>
+            <a class="breadcrumb-item" href="#">Library</a>
+            <a class="breadcrumb-item" href="#">Data</a>
+            <span class="breadcrumb-item active">{{titulo}}</span>
+        </nav>
+        <h3 class="text-themecolor title">{{titulo}} </h3> 
+      </div>
+    <!-- <div>
         <button class="right-side-toggle waves-effect waves-light btn-inverse btn btn-circle btn-sm pull-right m-l-10"><i class="ti-settings text-white"></i></button>
-    </div>
+    </div> -->
 </div>
