--- a/src/app/pages/public/pages/single/post-pricipal.component.html
+++ b/src/app/pages/public/pages/single/post-pricipal.component.html
@@ -58,7 +58,7 @@
     
                     <!-- post content -->
                     <div class="section-row" >
-                        <h3 *ngIf="title" class="tit">{{post.title}}</h3>
+                        <h3 *ngIf="post.title" class="tit">{{post.title}}</h3>
                          <div  #texto ></div>
                     </div>
                     <!-- /post content -->
