--- a/src/app/pages/private/private.component.html
+++ b/src/app/pages/private/private.component.html
@@ -1,4 +1,4 @@
-<div id="body"  class="fix-header card-no-border fix-sidebar">
+<div id="body" *ngIf="load"  class="fix-header card-no-border fix-sidebar">
     <!-- ============================================================== -->
     <!-- Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
