--- a/src/app/pages/public/pages/single/post-pricipal.component.html
+++ b/src/app/pages/public/pages/single/post-pricipal.component.html
@@ -21,11 +21,11 @@
     </div>
     <!-- /PAGE HEADER -->
 
-
 <div class="container">
     <div class="row">
         <div class="col-md-8 p-3">
             <div id="fotorama" 
+            *ngIf="imagenes"
             class="fotorama"
             data-width="100%"
             data-ratio="800/600"
@@ -46,19 +46,20 @@
             <div class="row">
                 <div class="col-md-8">
                     <!-- post share -->
-                    <div class="section-row">
+                    <div class="section-row" >
                         <div class="post-share">
-                            <a href="#" class="social-facebook"><i class="fa fa-facebook"></i><span>Share</span></a>
-                            <a href="#" class="social-twitter"><i class="fa fa-twitter"></i><span>Tweet</span></a>
-                            <a href="#" class="social-pinterest"><i class="fa fa-pinterest"></i><span>Pin</span></a>
+                            <a href="#" class="social-facebook"><i class="fab fa-facebook"></i><span>Share</span></a>
+                            <a href="#" class="social-twitter"><i class="fab fa-twitter"></i><span>Tweet</span></a>
+                            <a href="#" class="social-pinterest"><i class="fab fa-pinterest"></i><span>Pin</span></a>
                             <a href="#" ><i class="fa fa-envelope"></i><span>Email</span></a>
                         </div>
                     </div>
                     <!-- /post share -->
     
                     <!-- post content -->
-                    <div class="section-row" >
-                        <h3 *ngIf="post.title" class="tit">{{post.title}}</h3>
+                    <div class="section-row"  >
+                        <!-- <h3 *ngIf="post" class="tit">{{post.title}}</h3> -->
+                        <!-- aqui se renderizae el texto -->
                          <div  #texto ></div>
                     </div>
                     <!-- /post content -->
@@ -284,5 +285,5 @@
         </div>
         <!-- /container -->
     </div>
+  </div>
 </div>
-
