--- a/src/app/pages/public/public.component.html
+++ b/src/app/pages/public/public.component.html
@@ -1,14 +1,14 @@
 
- <app-header></app-header>
+ <app-header *ngIf="load"></app-header>
 
 <!-- ============================================================== -->
 <!-- --------------------------pages routes --------------- -->
 <!-- ============================================================== -->
-<router-outlet></router-outlet>
+<router-outlet *ngIf="load"></router-outlet>
 			          
 <!-- ============================================================== -->
 <!-- ---------------fin pages routes --------------------------- -->
 <!-- ==============================================================-->
  
 	
-<app-footer></app-footer>
+<app-footer  *ngIf="load"></app-footer>
