--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,78 @@
-<p>login works!</p>
+
+<section *ngIf="load" id="wrapper">
+    <div class="login-register" style="background-image:url(../assets/images/background/login-register.jpg);">
+        <div class="login-box card">
+            <div class="card-body">
+                <form 
+                (ngSubmit)="ingresar(f)"
+                ngNativeValidate
+                 #f="ngForm"
+                class="form-horizontal form-material" action="index.html">
+                    <h3 class="box-title m-b-20">lOGUIN</h3>
+                    <div class="form-group ">
+                        <div class="col-xs-12">
+                            <input 
+                            [(ngModel)]="email"
+                             name="email"
+                            class="form-control" type="email" 
+                            required="" placeholder="gmail" >
+                         </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <input
+                            [(ngModel)]="password"
+                            name="password"
+                             class="form-control" 
+                             type="password" required="" placeholder="Contraseña"> </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-12">
+                            <div class="checkbox checkbox-info pull-left p-t-0">
+                                <input id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
+                                <label for="checkbox-signup"> recuerdame </label>
+                            </div> <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot pwd?</a> </div>
+                    </div>
+                    <div class="form-group text-center">
+                        <div class="col-xs-12 p-b-20">
+                            <button class="btn btn-block btn-lg btn-info btn-rounded" type="submit">Ingresar</button>
+                        </div>
+                    </div>
+               
+                    <div class="form-group m-b-0">
+                        <div class="col-sm-12 text-center">
+                            ¿no tienes una cuenta? <a [routerLink]="['/register']" class="text-info m-l-5"><b>registrarme</b></a>
+                        </div>
+                    </div>
+                </form>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
+                        <div class="social">
+                            <a  class="btn  btn-facebook" data-toggle="tooltip" title="Login with Facebook"> <i aria-hidden="true" class="fab fa-facebook"></i> </a>
+                            <div id="elemento"  class="btn btn-googleplus" data-toggle="tooltip" title="Login with Google"> 
+                                <i aria-hidden="true" class="fab fa-google-plus"></i> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <form class="form-horizontal" id="recoverform" action="index.html">
+                    <div class="form-group ">
+                        <div class="col-xs-12">
+                            <h3>Recover Password</h3>
+                            <p class="text-muted">Enter your Email and instructions will be sent to you! </p>
+                        </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-xs-12">
+                            <input class="form-control" type="text" required="" placeholder="Email"> </div>
+                    </div>
+                    <div class="form-group text-center m-t-20">
+                        <div class="col-xs-12">
+                            <button class="btn btn-primary btn-lg btn-block text-uppercase waves-effect waves-light" type="button">Reset</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
