--- a/src/app/pages/login/register.component.html
+++ b/src/app/pages/login/register.component.html
@@ -1,1 +1,68 @@
-<p>register works!</p>
+<section id="wrapper" *ngIf="load">
+    <div class="login-register" style="background-image:url(../assets/images/background/login-register.jpg);">
+        <div class="login-box card">
+            <div class="card-body">
+                <form [formGroup]="form" 
+                (ngSubmit)="entrar()"
+                class="form-horizontal form-material" id="loginform" action="index.html">
+                    <h3 class="box-title m-b-20">Resgitrar</h3>
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <input
+                             formControlName="nombre" 
+                            class="form-control" type="text" required="" placeholder="nombre">
+                        </div>
+                       <app-message-errors  [data]=" control('nombre')" nombre="nombre" ></app-message-errors>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-xs-12">
+                            <input
+                             formControlName="email"
+                             class="form-control" type="text" required="" placeholder="Email">
+                        </div>
+                        <app-message-errors  [data]=" control('email')" nombre="email" ></app-message-errors>
+
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-xs-12">
+                            <input 
+                             formControlName="password"
+                            class="form-control" type="password" required="" placeholder="Password">
+                        </div>
+                        <app-message-errors  [data]=" control('password')" nombre="contraseña" ></app-message-errors>
+
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <input
+                             formControlName="confirmPass"
+                            class="form-control" type="password" required="" placeholder="Confirm Password">
+                        </div>
+                        <app-message-errors  [data]=" control('confirmPass')" nombre="contraseña" ></app-message-errors>
+
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-12">
+                            <div class="checkbox checkbox-success p-t-0">
+                                <input
+                                 formControlName="acuerdos" 
+                                type="checkbox"  class="filled-in chk-col-light-blue">
+                                <label for="checkbox-signup">acepto los <a href="javascript:void(0)">Terminos y condiciones</a></label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group text-center p-b-20">
+                        <div class="col-xs-12">
+                            <button class="btn btn-info btn-lg btn-block btn-rounded text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
+                        </div>
+                    </div>
+                    <div class="form-group m-b-0">
+                        <div class="col-sm-12 text-center">
+                            ya tengo una cuenta? <a  [routerLink]="['/login']" class="text-info m-l-5"><b>ingresar</b></a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
