--- a/src/app/pages/public/shared/textohtml/textohtml.component.html
+++ b/src/app/pages/public/shared/textohtml/textohtml.component.html
@@ -1,4 +1,6 @@
-<div  #texto>
 
+
+<div class="scrollbar style-4"  >
+    <div class="force-overflow" #texto style="text-align: center;"></div>
 </div>
-
+    
